syntax = "proto3";

package chef.automate.domain.cfgmgmt.response;
option go_package = "github.com/chef/automate/api/interservice/cfgmgmt/response";

import "google/protobuf/timestamp.proto";

message Events {
  repeated Event events = 1;
  int64 total_events = 2;
}

message Event {
  string event_type = 1;
  string task = 2;
  google.protobuf.Timestamp timestamp = 3;
  string entity_name = 4;
  string requestor_type = 5;
  string requestor_name = 6;
  string service_hostname = 7;
  string id = 8;
  string parent_name = 16;
  string parent_type = 17;
}

message EventCounts {
  int64 total = 1;
  repeated EventCount counts = 2;
}

message EventCount {
  string name = 1;
  int64 count = 2;
}
